# Big-Data-Project

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  config.py  fix_dataproc_permissions.sh  funnel_funnel_hourly_brand_from_kafka.py  gcp_setup.sh  kafka_replay_producer.py  kafka_startup.sh  requirements.txt  setup.sh
advanced_anomaly_detection/: README_advanced_anomaly.md  __init__.py  advanced_anomaly_pipeline.py  requirements_advanced.txt
dashboard/: .dockerignore  Dockerfile  Overview.py  app.py  deploy.sh  pyproject.toml  requirements.txt
dashboard/.streamlit/: config.toml
dashboard/pages/: 1_Brands.py  2_Categories.py  3_Price_Bands.py  4_Anomalies.py  Anomaly_Detection.py  Brand_Performance.py  Category_Analysis.py  Price_Segmentation.py  __init__.py
dashboard/utils/: __init__.py  analytics.py  charts.py  data_loader.py
gcp_jobs/: 01_batch_bronze_silver_gold.py  02_additional_gold_tables.py  03_build_stream_input.py  04_streaming_funnel.py  05_anomaly_detection.py  06_advanced_anomaly_detection.py  06_summary_report.py  inspect_kafka_stream_gold.py  test_gcp_pipeline.py
kafka/: funnel_funnel_hourly_brand_from_kafka.py  replay_from_bronze_spark.py  synthetic_producer.py
notebooks/: 01_batch_bronze_silver_gold.ipynb  02_additional_gold_tables.ipynb  03_build_stream_input_from_bronze.ipynb  04_streaming_funnel_hourly_brand.ipynb  05_anomaly_detection_hourly_brand.ipynb  06_advanced_anomaly_detection.ipynb  06_visualizations.ipynb
stream_input/: .part-00000-fc9e7192-6472-4fa6-ac9d-543eb572e930-c000.snappy.parquet.crc  (+49 more)
tables/: .gitkeep
(+15 files in other folders)
