[project]
name = "funnelpulse-dashboard"
version = "0.1.0"
description = "Real-time e-commerce funnel analytics dashboard"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "google-cloud-storage>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

