[project]
name = "funnelpulse-dashboard"
version = "0.1.0"
description = "Real-time e-commerce funnel analytics dashboard"
requires-python = ">=3.11,<3.13"
dependencies = [
    "streamlit>=1.28.0",
    "polars>=0.20.0",
    "plotly>=5.18.0",
    "google-cloud-storage>=2.14.0",
    "fsspec>=2023.10.0",
    "gcsfs>=2023.10.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "watchdog>=6.0.0",
]

[tool.uv]
dev-dependencies = []
